--- a/index.html
+++ b/index.html
@@ -43,7 +43,19 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main aria-label="main">
+      <section class="home" aria-label="home section">
+        <div class="container">
+          <h1 class="home-title" aria-label="title">
+            Ivan Constantinovich Aivazovsky
+          </h1>
+          <p class="home-description" aria-label="description">
+            Russian marine painter of Armenian origin, collector, philanthropist
+          </p>
+          <img class="home-img" src="assets/webp/home.webp" alt="" />
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
