fix history img

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="container">
           <h2 class="history-title" aria-label="history title">History</h2>
           <img
-            src="/assets/webp/history.webp"
+            src="assets/webp/history.webp"
             alt="photo"
             class="history-photo"
           />
